--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ body::before{
   </div>
 </section>
 <section id="heartLock" class="fade-section">
-  <h2>Kalbimi Açabilir misin? 🔒💖</h2>
+  <h2>Kalbimin Kilidini Açabilir misin? 🔒💖</h2>
 
   <div id="heartContainer">
     <div id="powerCount">0</div>
